syntax = "proto3";

import "google/protobuf/timestamp.proto";

service SessionService {
  rpc StartSession(StartSessionRequest) returns (StartSessionResponse);
  rpc GetSession(GetSessionRequest) returns (Session);
  rpc DeleteSession(DeleteSessionRequest) returns (DeleteSessionResponse);
}

message StartSessionRequest { 
  string user_id = 1;
}

message StartSessionResponse {
  Session session = 1;
  CookieOptions cookie_options = 2;
}

message CookieOptions {
  bool secure = 1;
  string expires = 2;
}

message GetSessionRequest {
  string session_id = 1;
}

message Session {
  string session_id = 1;
  string user_id = 2;
  google.protobuf.Timestamp expired_at = 3;
}

message DeleteSessionRequest {
  string session_id = 1;
}

message DeleteSessionResponse {}